# flux-bot

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  bot_helper.py  docker-compose-dev.yml  docker-compose.yml  main.py  notificator.py  pyproject.toml  readme.md  requirements.txt
bot/: connector.py  main.py  notificator.py  settings.py  tg.py
bot/migrations/: deals.py
bot/models/: deals.py
migrations/: README.md  env.py
migrations/versions/: 1d3b7e8e4e96_0_1_0.py  2023-05-02_create_bots_table.py  2023-05-13_add_name_column_to_bots_table.py  2023-05-13_create_users_table.py  2023-05-13_update_bots_table_add_copy_bot_id.py  2023-05-17_create_exchanges_table.py  2023-05-19_update_bots_table_add_deleted_at.py  2023-05-20_update_bots_table_add_new_columns.py  2023-05-25_update_bots_table_add_exchange_id.py  2023-05-25_update_exchanges_table_add_deleted_at.py  2023-06-28_update_deals_table_add_position.py  2023-07-08_update_exchanges_table_add_hedge.py  7e438348d5aa_.py  a0a1f308e54a_0_1_0.py  b4aaabb4278e_0_1_0.py  cb0c87169654_0_1_0.py  dc630e80137a_0_1_0.py
src/: config.py
src/app/controllers/: deals.py  login.py  signal.py  user.py
src/app/models/: __init__.py  bot.py  deal.py  deals.py  order.py  user.py
src/app/repositories/: __init__.py  base.py  bot.py  crud_user.py  deal.py  deals.py  order.py
src/app/routes/: deals.py  signal.py  user.py
src/app/schemas/: __init__.py  deals.py  order.py  signal.py
src/app/services/: bot.py  deal.py  deals.py  order.py  user.py
src/bot/: bot.py  connector.py  helper.py  notificator.py  notifier.py  position.py  signal_dispatcher.py  signal_dispatcher_factory.py  singal_dispatcher_spawner.py  telegram.py
src/bot/async_exchanges/: async_base.py  async_binance.py  async_okx.py
src/bot/exceptions/: __init__.py  base_exception.py  connector_exception.py  disabled_exception.py  not_found_exception.py  (+2 more)
src/core/: config.py  initial_data.py
src/db/: __init__.py  base.py  init_db.py  session.py
src/schemas/: __init__.py  signal.py
src/server/: server.py  uvicorn_config.py
(+102 files in other folders)
