[tool.poetry]
name = "trading-view-connector"
version = "1.0.0"
description = ""
authors = ["Vitaliy Klychkov, Mykola Symon"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
python-dotenv = "^0.21.0"
pyramid = "^2.0"
python-telegram-bot = "^13.14"
ccxt = "^2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot.main:main"
