[tool.poetry]
name = "trading-view-connector"
version = "0.0.2"
description = ""
authors = ["Vitaliy Klychkov, Mykola Symon, Vladimir Grigoriev"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^0.21.0"
python-telegram-bot = "^13.14"
ccxt = "^2.4"
fastapi = "^0.88"
pydantic = "^1.10.4"
SQLAlchemy = "^1.4"
alembic = "^1.9"
uvicorn = "^0.20"
python-jose = "3.3"
passlib = "^1.7"
psycopg2 = "^2.9"
websockets = "^10.4"

[tool.poetry.dev-dependencies]
email-validator = "^1.3"
python-multipart = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "main:main"
