[tool.poetry]
name = "trading-view-connector"
version = "0.0.2"
description = ""
authors = ["Vitaliy Klychkov, Mykola Symon, Vladimir Grigoriev"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^1"
python-telegram-bot = "^20"
ccxt = "^2.8"
fastapi = "^0.95"
pydantic = "^1.10.4"
alembic = "^1.9"
uvicorn = "^0.21"
python-jose = "3.3"
passlib = "^1.7"
psycopg2 = "^2.9"
websockets = "^10.4"
aioredis = "^2.0.1"
sqlalchemy = "^2.0.7"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
email-validator = "^1.3"
python-multipart = "*"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "main:main"
